--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Agenda Studio</title>
+</head>
+<body>
+    <div class="container-formulario">
+        <h2>Agendamento</h2>
+        <form action="#" method="post">
+            <div class="campo">
+                <label for="nome">Nome</label>
+                <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
+            </div>
+             <div class="campo">
+                <label for="telefone">telefone:</label>
+                <input type="tel" id="telefone" name="telefone" placeholder="(00) 0000-0000" required>
+            </div>
+             <div class="campo">
+                <label for="data">Data:</label>
+                <input type="date" id="data" name="data" placeholder="data" required>
+            </div>
+             <div class="campo">
+                <label for="data">harario:</label>
+                <input type="time" id="time" name="time" placeholder="" required>
+            </div>
+             <div class="campo">
+                <label for="servico">Escolha um servico:</label>
+                <select id="servico" name="servico">
+                <option value="Alongamento">Alongamento</option>
+                <option value="banhodegel">banho de gel</option>
+                <option value="Esmaltacao">Esmaltaçâo</option>
+                </select>
+            </div>
+            <div class="botões">
+                <button type="submit" class="btn-enviar">Enviar</button>
+                <button type="reset" class="btn-limpar">Limpar</button>
+            </div>
+           
+        </form>
+    </div>
+</body>
 
+</html>
