--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container-formulario">
         <h2>Agendamento</h2>
-        <form action="#" method="post">
+        <form action="/agendar" method="post">
             <div class="campo">
                 <label for="nome">Nome</label>
                 <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
