Update option text for banho de gel

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
                 <label for="servico">Escolha um servico:</label>
                 <select id="servico" name="servico">
                 <option value="Alongamento">Alongamento</option>
-                <option value="banhodegel">banho de gel</option>
+                <option value="banhodegel">Banho De Gel</option>
                 <option value="Esmaltacao">Esmaltaçâo</option>
                 </select>
             </div>
